# aws-cli-tools

./: .env-example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
aws_cli_tools/: __init__.py  app.py  aws_common.py  cache.py  constants.py  errors.py  instances.py  models.py  output.py  ssm_targets.py  targets.py  ui.py
aws_cli_tools/commands/: __init__.py  login.py  region_loop.py  resolve_instance.py  ssm.py  version.py
tests/: conftest.py  test_aws_common.py  test_aws_common_stubber.py  test_cache.py  test_cli.py  test_commands_login.py  test_commands_region_loop.py  test_commands_resolve_instance.py  test_commands_ssm.py  test_errors.py  test_instances.py  test_instances_stubber.py  test_output.py  test_ssm_targets_stubber.py  test_targets.py  test_ui.py
