[project]
name = "aws-cli-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.70",
    "typer>=0.24.1",
    "python-dotenv>=1.0.1",
    "rich>=14.3.3",
    "textual>=6.1.0",
]

[project.scripts]
aws-cli-tools = "main:app"
