[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aws-cli-tools"
version = "0.1.1"
description = "Useful Tools for AWS CLIs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.70",
    "typer>=0.24.1",
    "python-dotenv>=1.0.1",
    "rich>=14.3.3",
    "textual>=6.1.0",
]

[project.scripts]
aws-cli-tools = "aws_cli_tools.app:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
